syntax = "proto3";

import "table_id.proto";
import "table_name.proto";

service TableNameGetter {
    rpc get (TableId) returns (TableName) {}
}